@@ -1183,6 +1183,56 @@ p {
   </div>
 </section>
 
+<section id="information">
+<h2>Stability Information</h2>
+
+<div class="section level-i" id="i:status:cr:element"><h3>This element is in the
+  <strong>call‐for‐implementation</strong> phase.</h3>
+    <p>The element is in the call‐for‐implementation phase.</p>
+    
+    <p>Usually, using the element is safe.  However, it is a new feature
+    so that it might not be implemented correctly.  If it is found that
+    the feature is hard or impossible to implement, the feature
+    might be revised, or in some case it might be dropped.</p>
+
+    <p>Elements defined by HTML4, Atom 1.0, and XBL 2.0 belong to this
+    class.</p>
+  </div>
+
+<div class="section level-i" id="i:status:lc:element"><h3>This element is in the <strong>last
+  call‐for‐comments</strong> phase.</h3>
+    <p>The element is in the last call‐for‐comments phase.</p>
+    
+    <p>The element is relatively mature, though the standardization
+    is not done yet.  It may be used for experiments.  Since it is a new
+    feature, it might not be implemented correctly or at all.  If it is
+    found that the feature is hard or impossible to implement, the feature
+    might be revised or might be dropped.</p>
+
+    <p>Elements defined by Web Forms 2.0 as well as some elements
+    defined by HTML5 belong to this class.</p>
+  </div>
+
+<div class="section level-i" id="i:status:wd:element"><h3>This element is documented in a <strong>working
+  draft</strong>.</h3>
+    <p>The element is documented in a working or editor's draft
+    and not yet completed.</p>
+    
+    <p>The element should not be used for any practical purpose.
+    The feature might be drastically changed later or might be
+    entirely removed.</p>
+
+    <p>Most of new elements defined by HTML5 belong to this class.</p>
+  </div>
+
+<div class="section level-i" id="i:status:non-standard:element"><h3>This element is <strong>not part of any
+  standard</strong>.</h3>
+    <p>The element is not part of any standard or draft.</p>
+    
+    <p>The element should not be used for any practical purpose.</p>
+  </div>
+</section>
+
 <section id="unsupported-messages">
 <h2><i>Unsupported</i> Messages</h2>
 
@@ -1274,7 +1324,15 @@ to solve a problem in a confusing or possibly wrong way.
 It does not affect to the conformance of the document, and
 may sometimes be inappropriate.</td>
 </tr>
-<tr class="level-unsupported" id="level-unsupported">
+<tr class="level-i" id="level-i">
+<th scope="row">Information</th>
+<td>Conforming.</td>
+<td>An informational message just provides an additional information
+on the feature used in the document or the status of the retrieval
+or so on.
+It does not affect to the conformance of the document.</td>
+</tr>
+<tr class="level-u" id="level-u">
 <th scope="row">Not supported</th>
 <td><em>Unknown</em>.</td>
 <td>Some feature that is not supported by the conformance checker
@@ -1295,6 +1353,6 @@ is used in the document.</td>
 and/or modify it under the same terms as Perl itself.</p>
 </section>
 
-<!-- $Date: 2007/11/23 06:36:19 $ -->
+<!-- $Date: 2008/02/24 02:17:51 $ -->
 </body>
 </html>
