@@ -1,3 +1,11 @@
+2008-02-24  Wakaba  <wakaba@suika.fam.cx>
+
+	* cc.cgi: Support for level-i (informational).
+
+	* cc-style.css: New style rules for informational messages added.
+
+	* error-description-source.xml (#information, #level-i): Added.
+
 2008-02-10  Wakaba  <wakaba@suika.fam.cx>
 
 	* cc.cgi: In CSS mode, add 'u' error for 'structure' category (until
